Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com' "
+    "'vandelay.com' # 'www.vandelay.com' \n",
+    "Str"
    ]
   },
   {
