Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "'vandelay.com' # 'www.vandelay.com' \n",
-    "Str('www')"
+    "Str ('www') + "
    ]
   },
   {
